# promptforge

./: .env.example  .gitignore  CLAUDE.md  README.md  config.yml  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: doc-sync.md
.claude/scripts/: update_docs.py
.github/workflows/: tests.yml
core/: __init__.py  cost_tracker.py  evaluator.py  generator.py  loop.py  metrics.py  models.py  optimizer.py  utils.py
datasets/: examples.py
datasets/fixtures/: __init__.py  demo_code_run.json
notebooks/: demo.ipynb
tests/unit/: test_cost_tracker.py  test_evaluator.py  test_metrics.py  test_utils.py
