[project]
name = "promptforge"
version = "0.1.0"
description = "Optimisation automatique de prompts par boucle agentique"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40.0",
    "tenacity>=8.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
notebook = [
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "nest_asyncio>=1.6",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
